--- a/pages/contact.html
+++ b/pages/contact.html
@@ -36,5 +36,17 @@ description:
     <div class="col-lg-6 col-md-5 col-sm-4 col-xs-12 margin-btm-20">
       <mip-img src="/images/contact/yuenan-weixin.jpg" alt="越南办公点微信"></mip-img>
     </div>
+    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 margin-btm-20">
+      <mip-img src="/images/contact/yuenan-1.jpg" alt="越南办公点"></mip-img>
+    </div>
+    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 margin-btm-20">
+      <mip-img src="/images/contact/yuenan-2.jpg" alt="越南办公点"></mip-img>
+    </div>
+    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 margin-btm-20">
+      <mip-img src="/images/contact/yuenan-3.jpg" alt="越南办公点"></mip-img>
+    </div>
+    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 margin-btm-20">
+      <mip-img src="/images/contact/yuenan-4.jpg" alt="越南办公点"></mip-img>
+    </div>
   </div>
 </div>
