--- a/pages/application.html
+++ b/pages/application.html
@@ -10,112 +10,112 @@ description:
   <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 margin-btm-10">
     <div class="shop-item">
       <div class="shop-thumbnail">
-        <mip-img src="{{ site.url }}/images/application/application-1.jpg" alt="{{ page.title }}"></mip-img>
+        <img class="img-responsive" src="{{ site.url }}/images/application/application-1.jpg" alt="{{ page.title }}">
       </div>
     </div>
   </div>
   <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 margin-btm-10">
     <div class="shop-item">
       <div class="shop-thumbnail">
-        <mip-img src="{{ site.url }}/images/application/application-2.jpg" alt="{{ page.title }}"></mip-img>
+        <img class="img-responsive" src="{{ site.url }}/images/application/application-2.jpg" alt="{{ page.title }}">
       </div>
     </div>
   </div>
   <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 margin-btm-10">
     <div class="shop-item">
       <div class="shop-thumbnail">
-        <mip-img src="{{ site.url }}/images/application/application-3.jpg" alt="{{ page.title }}"></mip-img>
+        <img class="img-responsive" src="{{ site.url }}/images/application/application-3.jpg" alt="{{ page.title }}">
       </div>
     </div>
   </div>
   <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 margin-btm-10">
     <div class="shop-item">
       <div class="shop-thumbnail">
-        <mip-img src="{{ site.url }}/images/application/application-4.jpg" alt="{{ page.title }}"></mip-img>
+        <img class="img-responsive" src="{{ site.url }}/images/application/application-4.jpg" alt="{{ page.title }}">
       </div>
     </div>
   </div>
   <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 margin-btm-10">
     <div class="shop-item">
       <div class="shop-thumbnail">
-        <mip-img src="{{ site.url }}/images/application/application-5.jpg" alt="{{ page.title }}"></mip-img>
+        <img class="img-responsive" src="{{ site.url }}/images/application/application-5.jpg" alt="{{ page.title }}">
       </div>
     </div>
   </div>
   <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 margin-btm-10">
     <div class="shop-item">
       <div class="shop-thumbnail">
-        <mip-img src="{{ site.url }}/images/application/application-6.jpg" alt="{{ page.title }}"></mip-img>
+        <img class="img-responsive" src="{{ site.url }}/images/application/application-6.jpg" alt="{{ page.title }}">
       </div>
     </div>
   </div>
   <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 margin-btm-10">
     <div class="shop-item">
       <div class="shop-thumbnail">
-        <mip-img src="{{ site.url }}/images/application/application-7.jpg" alt="{{ page.title }}"></mip-img>
+        <img class="img-responsive" src="{{ site.url }}/images/application/application-7.jpg" alt="{{ page.title }}">
       </div>
     </div>
   </div>
   <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 margin-btm-10">
     <div class="shop-item">
       <div class="shop-thumbnail">
-        <mip-img src="{{ site.url }}/images/application/application-8.jpg" alt="{{ page.title }}"></mip-img>
+        <img class="img-responsive" src="{{ site.url }}/images/application/application-8.jpg" alt="{{ page.title }}">
       </div>
     </div>
   </div>
   <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 margin-btm-10">
     <div class="shop-item">
       <div class="shop-thumbnail">
-        <mip-img src="{{ site.url }}/images/application/application-9.jpg" alt="{{ page.title }}"></mip-img>
+        <img class="img-responsive" src="{{ site.url }}/images/application/application-9.jpg" alt="{{ page.title }}">
       </div>
     </div>
   </div>
   <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 margin-btm-10">
     <div class="shop-item">
       <div class="shop-thumbnail">
-        <mip-img src="{{ site.url }}/images/application/application-10.jpg" alt="{{ page.title }}"></mip-img>
+        <img class="img-responsive" src="{{ site.url }}/images/application/application-10.jpg" alt="{{ page.title }}">
       </div>
     </div>
   </div>
   <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 margin-btm-10">
     <div class="shop-item">
       <div class="shop-thumbnail">
-        <mip-img src="{{ site.url }}/images/application/application-11.jpg" alt="{{ page.title }}"></mip-img>
+        <img class="img-responsive" src="{{ site.url }}/images/application/application-11.jpg" alt="{{ page.title }}">
       </div>
     </div>
   </div>
   <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 margin-btm-10">
     <div class="shop-item">
       <div class="shop-thumbnail">
-        <mip-img src="{{ site.url }}/images/application/application-12.jpg" alt="{{ page.title }}"></mip-img>
+        <img class="img-responsive" src="{{ site.url }}/images/application/application-12.jpg" alt="{{ page.title }}">
       </div>
     </div>
   </div>
   <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 margin-btm-10">
     <div class="shop-item">
       <div class="shop-thumbnail">
-        <mip-img src="{{ site.url }}/images/application/application-13.jpg" alt="{{ page.title }}"></mip-img>
+        <img class="img-responsive" src="{{ site.url }}/images/application/application-13.jpg" alt="{{ page.title }}">
       </div>
     </div>
   </div>
   <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 margin-btm-10">
     <div class="shop-item">
       <div class="shop-thumbnail">
-        <mip-img src="{{ site.url }}/images/application/application-14.jpg" alt="{{ page.title }}"></mip-img>
+        <img class="img-responsive" src="{{ site.url }}/images/application/application-14.jpg" alt="{{ page.title }}">
       </div>
     </div>
   </div>
   <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 margin-btm-10">
     <div class="shop-item">
       <div class="shop-thumbnail">
-        <mip-img src="{{ site.url }}/images/application/application-15.jpg" alt="{{ page.title }}"></mip-img>
+        <img class="img-responsive" src="{{ site.url }}/images/application/application-15.jpg" alt="{{ page.title }}">
       </div>
     </div>
   </div>
   <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 margin-btm-10">
     <div class="shop-item">
       <div class="shop-thumbnail">
-        <mip-img src="{{ site.url }}/images/application/application-16.jpg" alt="{{ page.title }}"></mip-img>
+        <img class="img-responsive" src="{{ site.url }}/images/application/application-16.jpg" alt="{{ page.title }}">
       </div>
     </div>
   </div>
