--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,16 +10,16 @@ description:
   <div class="row">
     <div class="col-lg-6 col-md-5 col-sm-4 col-xs-12 text-center margin-btm-20">
       <p class="title-4 text-red margin-btm-20">联系方式</p>
-      <p><i class="fas fa-map-marker-alt"></i> 地址：{{ site.address }}</p>
-      <p><i class="fas fa-phone"></i> 电话：<a href="tel:{{ site.tel1 }}">{{ site.tel }}</a></p>
-      <p><i class="fas fa-mobile-alt"></i> 业务洽谈：<a href="tel:{{ site.phone }}">{{ site.phone }}</a>（郭先生）</p>
-      <p><i class="fab fa-qq"></i> QQ：<a href="http://wpa.qq.com/msgrd?v=3&uin={{ site.qq }}&site=qq&menu=yes">{{ site.qq }}</a></p>
-      <p><i class="fas fa-fax"></i> 传真：{{ site.fax }}</p>
-      <p><i class="fas fa-envelope"></i> 邮箱：{{ site.email }}</p>
-      <p><i class="fab fa-weixin"></i> 微信：<span on="tap:weixin.toggle" id="btn-open" tabindex="0">{{ site.weixin }}(点击扫码)</span></p>
+      <p>地址：{{ site.address }}</p>
+      <p>电话：<a href="tel:{{ site.tel1 }}">{{ site.tel }}</a></p>
+      <p>业务洽谈：<a href="tel:{{ site.phone }}">{{ site.phone }}</a>（郭先生）</p>
+      <p>QQ：<a href="http://wpa.qq.com/msgrd?v=3&uin={{ site.qq }}&site=qq&menu=yes">{{ site.qq }}</a></p>
+      <p>传真：{{ site.fax }}</p>
+      <p>邮箱：{{ site.email }}</p>
+      <img src="{{ site.url }}/images/assets/weixin.jpg" class="img-responsive center-block" alt="荣钜机械微信客服">
     </div>
     <div class="col-lg-6 col-md-7 col-sm-8 col-xs-12 margin-btm-20">
-      <a href="https://j.map.baidu.com/40/3Zi" target="_blank"><mip-img src="/images/contact/map.jpg" alt="荣钜机械百度地图"></mip-img></a>
+      <a href="https://j.map.baidu.com/40/3Zi" target="_blank"><img src="/images/contact/map.jpg" class="img-responsive" alt="荣钜机械百度地图"></a>
     </div>
   </div>
 </div>
@@ -29,27 +29,27 @@ description:
       <p class="title-4 text-red margin-btm-20">越南办公点</p>
       <p><b>汇聚纺织织带机械贸易有限公司</b></p>
       <p><b>HOI TU ONE MEMBER COMPANY LIMIITED</b></p>
-      <p><i class="fas fa-map-marker-alt"></i> 地址：越南平阳省顺安市顺交坊平交坊区192号地区40号</p>
-      <p><i class="fas fa-user"></i> 联系人：郭佳伟</p>
-      <p><i class="fas fa-phone"></i> 越南电话：0084-033-673-7202</p>
-      <p><i class="fas fa-phone"></i> 中国电话：+86-13927719550</p>
+      <p>地址：越南平阳省顺安市顺交坊平交坊区192号地区40号</p>
+      <p>联系人：郭佳伟</p>
+      <p>越南电话：0084-033-673-7202</p>
+      <p>中国电话：+86-13927719550</p>
     </div>
     <div class="col-lg-6 col-md-5 col-sm-4 col-xs-12 margin-btm-20">
-      <mip-img src="{{ site.url }}/images/contact/yuenan-weixin.jpg" alt="越南办公点微信"></mip-img>
+      <img src="{{ site.url }}/images/contact/yuenan-weixin.jpg" class="img-responsive center-block" alt="越南办公点微信">
     </div>
   </div>
   <div class="row margin-btm-10">
     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 margin-btm-20">
-      <mip-img src="{{ site.url }}/images/contact/yuenan-1.jpg" alt="越南办公点"></mip-img>
+      <img src="{{ site.url }}/images/contact/yuenan-1.jpg" class="img-responsive center-block" alt="越南办公点">
     </div>
     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 margin-btm-20">
-      <mip-img src="{{ site.url }}/images/contact/yuenan-2.jpg" alt="越南办公点"></mip-img>
+      <img src="{{ site.url }}/images/contact/yuenan-2.jpg" class="img-responsive center-block" alt="越南办公点">
     </div>
     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 margin-btm-20">
-      <mip-img src="{{ site.url }}/images/contact/yuenan-3.jpg" alt="越南办公点"></mip-img>
+      <img src="{{ site.url }}/images/contact/yuenan-3.jpg" class="img-responsive center-block" alt="越南办公点">
     </div>
     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6 margin-btm-20">
-      <mip-img src="{{ site.url }}/images/contact/yuenan-4.jpg" alt="越南办公点"></mip-img>
+      <img src="{{ site.url }}/images/contact/yuenan-4.jpg" class="img-responsive center-block" alt="越南办公点">
     </div>
   </div>
 </div>
